# banco-exemplo/src/main/http/swagger/swagger.json
@@ -285,6 +285,76 @@
                     }
                 }
             }
+        },
+        "/webhook/deposit": {
+            "post": {
+                "summary": "Realiza um deposito",
+                "tags": [
+                    "webhook"
+                ],
+                "requestBody": {
+                    "description": "Deve ser utilizado por serviços externos para realizar depositos",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "payer_cpf": {
+                                        "type": "string",
+                                        "pattern": "^[0-9]{3}\\.[0-9]{3}\\.[0-9]{3}-[0-9]{2}$",
+                                        "description": "CPF do titular da conta (formato: XXXXXXXXXXX)"
+                                    },
+                                    "receiver_cpf": {
+                                        "type": "string",
+                                        "pattern": "^[0-9]{3}\\.[0-9]{3}\\.[0-9]{3}-[0-9]{2}$",
+                                        "description": "CPF do titular da conta (formato: XXXXXXXXXXX)"
+                                    },
+                                    "value": {
+                                        "type": "number",
+                                        "description": "50.25"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Requisição inválida",
+                        "content": {
+                            "application/json": {
+                                "examples": {
+                                    "exemplo-2": {
+                                        "value": {
+                                            "message": "error message",
+                                            "error": "Error"
+                                          }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Requisição inválida",
+                        "content": {
+                            "application/json": {
+                                "examples": {
+                                    "exemplo-2": {
+                                        "value": {
+                                            "message": "Internal server error",
+                                            "error": "Error"
+                                          }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
